# crypto-blast

./: .gitignore  README.md  asset-status.md  flux-prompts.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
.superpowers/sdd/: final-fix-report.md
docs/: COMMITMENT.md  ESCROW.md  FORFEIT.md  VERIFIER_DEPLOY.md
docs/superpowers/plans/: 2026-06-16-engine-core-ballistics-terrain.md  2026-06-16-p2-turn-loop.md  2026-06-27-onchain-verification-roadmap.md  2026-06-27-p3-arsenal-wheel.md  2026-06-27-phase1-rust-sim-port.md  2026-06-27-phase2-onchain-verifier-lock.md  2026-06-27-phase4a-escrow-primitive.md  2026-06-28-phase4a-interleaved-attestation-court.md  2026-06-29-commit-reveal-forfeit.md
docs/superpowers/specs/: 2026-06-16-crypto-blast-design.md  2026-06-16-p2-turn-loop-design.md  2026-06-27-p3-arsenal-wheel-design.md  2026-06-27-phase4-verifiable-match-settlement-design.md  2026-06-28-phase4a-interleaved-attestation-court.md  2026-06-29-commit-reveal-forfeit-design.md  2026-06-29-court-challenge-window-design.md
public/sprites/: manifest.json
scripts/: build-verify-tx.ts  deploy-verifier.ts  export-fixture.ts  gen-court-fixture.ts  prep-assets.py  replay.ts
src/: main.js  main.ts
src/core/: AimController.ts  Wind.ts  aim.ts  rng.ts  time.ts  trig.ts
src/physics/: DestructibleTerrain.ts  ProjectilePhysics.ts
src/render/: HazardRenderer.ts  TerrainRenderer.ts  WeaponWheel.ts
src/scenes/: BootScene.js  BootScene.ts  GameScene.ts
src/sim/: World.ts  attest.ts  demoMatch.ts  exchange.ts  forfeit.ts  seed.ts  serialize.ts  tape.ts  tapeBinary.ts
src/terrain/: TerrainGenerator.ts
src/util/: download.ts
src/weapons/: weaponData.ts
tests/: AimController.test.ts  DestructibleTerrain.test.ts  ProjectilePhysics.test.ts  TerrainGenerator.test.ts  WeaponWheel.test.ts  Wind.test.ts  World.test.ts  aim.test.ts  attest.test.ts  buildVerifyTx.test.ts  commit.test.ts  exchange.test.ts  forfeit-codec.test.ts  replay.test.ts  seed.test.ts  tapeBinary.test.ts  time.test.ts  trig.test.ts  weaponData.test.ts
verifier/: Cargo.toml
verifier/bench/: Cargo.toml  gen-tape.py
verifier/bench/.cargo/: config.toml
verifier/bench/src/: main.rs  replay.rs  tape_demo_data.rs
verifier/contract/: Cargo.toml  rust-toolchain.toml
verifier/contract/.cargo/: config.toml
verifier/contract/src/: escrow.rs  forfeit.rs  main.rs
verifier/contract/tests/: escrow.rs  forfeit.rs  regen_court_fixture.rs  verify.rs
verifier/src/: aim.rs  attest.rs  lib.rs  physics.rs  rng.rs  tape.rs  terrain.rs  trig.rs  weapons.rs  world.rs
verifier/tests/: conformance.rs  fixture-attested-lockhashes.txt  fixture-court-heads.txt  fixture-court.meta.txt  fixture-initial.hash  fixture-initial.json  fixture-projectile.txt  fixture-rng.txt  fixture-seed.txt  fixture-trig-full.txt  fixture-trig.txt  fixture-winner.hash  tape-demo.hash  tape-demo.json  tape-midflight.hash  tape-move.hash  tape-move.json  tape-selectfire.hash  tape-selectfire.json  tape-turnloop.hash  tape-turnloop.json
