[package]
name = "verifier"
version = "0.0.0"
edition = "2021"

[dependencies]
blake2b-rs = "0.2"
# serde drives the WorldState mirror's #[derive(Deserialize)] and the test-only
# fixture loader; both live in the library so they are regular dependencies.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
# no_std blake2b used by the on-chain verifier path (bench crate + CKB-VM).
# Pinned here so the host conformance test can assert it reproduces the golden.
blake2b-ref = { version = "0.3", default-features = false }
