[package]
name = "verifier-bench"
version = "0.0.0"
edition = "2021"
publish = false

# `no_std` CKB-VM measurement binaries for the bare-metal
# `riscv64imac-unknown-none-elf` target run under ckb-debugger. Two binaries:
#   * `bench`  (src/main.rs)   — Phase-0 commit-only: blake2b-256 over the
#                                921,988-byte canonical-bytes fixture. No sim, no
#                                alloc. Measures the hashing step in isolation.
#   * `replay` (src/replay.rs) — Phase-1 full-match: create_world + step_world×N
#                                + serialize_world + blake2b-256, replaying the
#                                embedded demo tape and self-gating on its golden.
# Both hash with the pure-Rust `no_std` `blake2b-ref` (the ckb-ecosystem
# standard), so the measured cycles reflect the Phase-2 on-chain path, not host
# `blake2b-rs`.

[[bin]]
name = "bench"
path = "src/main.rs"

[[bin]]
name = "replay"
path = "src/replay.rs"

[dependencies]
# Pure-Rust, no_std, no-alloc blake2b. Verified to reproduce the golden fixture
# hashes byte-for-byte on the host before trusting cycle counts.
blake2b-ref = { version = "0.3", default-features = false }
# The sim core, built no_std (serde/serde_json/blake2b-rs gated off). Supplies
# create_world / step_world / serialize_world for the full-replay binary.
verifier = { path = "..", default-features = false }
# no_std global allocator for the full-replay binary (the sim allocates the
# terrain mask + serialize buffer). Frees, so peak ~2 MB stays well under 4 MB.
linked_list_allocator = "0.10"

[profile.release]
panic = "abort"
opt-level = 3
lto = true
codegen-units = 1
