[package]
name = "verifier-contract"
version = "0.0.0"
edition = "2021"
publish = false

# The on-chain verifier LOCK SCRIPT. Built for `riscv64imac-unknown-none-elf`
# (the CKB-VM target) as a `no_std` / `no_main` contract; the `src/main.rs` body
# is gated behind `cfg(target_arch = "riscv64")` so the SAME crate also compiles
# trivially for the host (an empty `main`) — that lets the ckb-testtool
# integration tests in `tests/verify.rs` run under a normal host `cargo test`
# while the contract binary itself is produced with
# `--target riscv64imac-unknown-none-elf --release`.

[[bin]]
name = "verifier-lock"
path = "src/main.rs"

# The Phase-4 escrow-lock (court path, tag=1). Same no_std / no_main contract
# shape as verifier-lock; adds bundled secp256k1 recovery (k256) + per-turn
# signer attribution + winner-bound payout. Built for the same riscv64 target.
[[bin]]
name = "escrow-lock"
path = "src/escrow.rs"

# Contract-only deps: pulled in for the riscv64 build, never needed by the host
# test harness. ckb-std supplies the syscall ABI + entry/panic glue; verifier is
# the no_std sim core; blake2b-ref is the no_std ckb-default-hash; the linked-list
# allocator backs a single-hart global heap (CKB-VM has no atomics — a spin-lock
# allocator traps; see verifier/bench/src/replay.rs for the proven approach).
[target.'cfg(target_arch = "riscv64")'.dependencies]
ckb-std = "1.1"
blake2b-ref = { version = "0.3", default-features = false }
verifier = { path = "..", default-features = false }
linked_list_allocator = "0.10"
# Bundled pure-Rust secp256k1 recoverable-ECDSA for the escrow-lock court path.
# Chosen over dynamic-loading the consensus secp256k1 lib because that requires
# sourcing/deploying the prebuilt recovery dynamic library into ckb-testtool
# (not available offline here); k256 is self-contained no_std + alloc and only
# the verify/recover path is used (no RNG). Trades binary size + cycles for a
# hermetic, testable build — see task-4-report.md.
k256 = { version = "0.13", default-features = false, features = ["ecdsa", "arithmetic"] }

# Host-only test harness: spins up CKB-VM in-process and asserts accept/reject.
[dev-dependencies]
ckb-testtool = "1.1"
hex = "0.4"
# Host-side replay in the escrow test: computes the real winner + nonce commits
# (verifier::ckbhash) so the test asserts payout against the actually-simulated
# result, not a hard-coded one.
verifier = { path = ".." }

[profile.release]
# Matches verifier/bench so the proven, byte-identical replay path is preserved.
# NB: LTO is OFF — with `-C target-feature=-a` (see .cargo/config.toml) LTO
# prevents LLVM from lowering the `bytes` crate's atomicrmw to `__atomic_*`
# libcalls ("Cannot select AtomicLoadAdd"), so it is left disabled here.
panic = "abort"
opt-level = 3
codegen-units = 1
